# TsSplitter

./: .gitignore  .gitmodules  .hgignore  .hgtags  CMakeLists.txt  Doxyfile  Makefile.am  TsSplitterConfig.cmake.in  configure.ac  setuplinks.sh
.github/workflows/: automake.yml  cmake.yml
Include/: Sample
Include/Sample/.Config/: ConfiguredSample.h.in  PreConfigSample.msvc.h
Include/Sample/Bar/: Bar.h
Include/Sample/Common/: SampleDocument.h  SampleSettings.h
Include/Sample/Foo/: Foo.h
Include/TsSplitter/.Config/: ConfiguredTsSplitter.h.in  PreConfigTsSplitter.msvc.h
Include/TsSplitter/Common/: FileReader.h  FileWriter.h  SampleDocument.h  SampleSettings.h  ServicePmtTable.h  TsCrc32.h  TsSplitterProject.h  TsSplitterSettings.h  TsSplitterTypes.h
Include/TsSplitter/DocCls/: TsFileSplitter.h
Lib/: CMakeLists.txt  Makefile.am
Lib/.Config/: CMakeLists.txt  Makefile.am
Lib/.LinkerScript/: Bar.in  Common.in  DocCls.in  Foo.in  LinkerScripts.m4
Lib/Bar/: Bar.cpp  CMakeLists.txt  Makefile.am
Lib/Bar/Tests/: BarTest.cpp  TestConf.cmake  TestConf.mak
Lib/Common/: CMakeLists.txt  FileReader.cpp  FileWriter.cpp  Makefile.am  SampleDocument.cpp  ServicePmtTable.cpp  TsCrc32.cpp
Lib/Common/Tests/: FileReaderTest.cpp  SampleDocumentTest.cpp  SampleSettingsTest.cpp  TestConf.cmake  TestConf.mak  TsCrc32Test.cpp  TsSplitterSettingsTest.cpp
Lib/DocCls/: CMakeLists.txt  Makefile.am  TsFileSplitter.cpp
Lib/DocCls/Tests/: TestConf.cmake  TestConf.mak  TsFileSplitterTest.cpp
Lib/Foo/: CMakeLists.txt  Foo.cpp  Makefile.am
Lib/Foo/Tests/: FooTest.cpp  TestConf.cmake  TestConf.mak
